--- a/snode/docker-compose.yml
+++ b/snode/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   db:
-    image: postgres:14.1-alpine
+    image: postgres:15.1
     restart: always
     environment:
       - POSTGRES_USER=postgres
