--- a/snode/package.json
+++ b/snode/package.json
@@ -5,7 +5,7 @@
   "main": "src/app.ts",
   "scripts": {
     "build": "rimraf ./build && tsc",
-    "dev": "ts-node-dev --respawn --transpile-only ./src/app.ts",
+    "dev": "ts-node-dev --respawn --inspect=9229 --transpile-only ./src/app.ts",
     "heroku-postbuild": "npm run build",
     "start": "nodemon",
     "inspect": "nodemon --inspect src/app.ts",
