--- a/vnode/package.json
+++ b/vnode/package.json
@@ -29,9 +29,11 @@
     "luxon": "^3.1.0",
     "moment": "^2.29.4",
     "pg-promise": "^10.15.0",
+    "random": "^4.0.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "unique-random": "^3.0.0",
     "winston": "^3.8.2",
     "winston-transport": "^4.5.0"
   },
