--- a/snode/package.json
+++ b/snode/package.json
@@ -37,6 +37,7 @@
     "agenda": "^2.0.2",
     "agendash": "^1.0.0",
     "argon2": "^0.28.5",
+    "axios": "^1.2.0",
     "bent": "7.3.12",
     "body-parser": "^1.18.2",
     "celebrate": "^9.1.0",
@@ -66,7 +67,7 @@
     "image-size": "0.8.3",
     "ipfs-http-client": "^56.0.3",
     "jsonwebtoken": "^8.2.0",
-    "lodash": "^4.17.13",
+    "lodash": "^4.17.21",
     "luxon": "^3.0.3",
     "mailgun-js": "^0.22.0",
     "method-override": "^3.0.0",
@@ -88,6 +89,7 @@
     "typedi": "^0.8.0",
     "typescript": "^4.5.4",
     "typings": "^2.1.1",
+    "underscore": "^1.13.6",
     "unique-names-generator": "^4.7.1",
     "web3": "1.6.0",
     "winston": "^3.2.1"
