--- a/snode/package.json
+++ b/snode/package.json
@@ -81,6 +81,7 @@
     "node-schedule": "1.3.2",
     "openpgp": "^5.3.1",
     "pg-promise": "^10.12.0",
+    "promise.allsettled": "^1.0.6",
     "random-avatar-generator": "^2.0.0",
     "reflect-metadata": "^0.1.12",
     "request-promise": "^4.2.6",
