snode - integration tests (3)

--- a/snode/package.json
+++ b/snode/package.json
@@ -9,7 +9,7 @@
     "heroku-postbuild": "npm run build",
     "start": "nodemon",
     "inspect": "nodemon --inspect src/app.ts",
-    "test": "mocha -r ts-node/register tests/**/*.test.ts --require tests/root.ts --serial",
+    "test": "mocha --inspect=9229 -r ts-node/register tests/**/*.test.ts --require tests/root.ts --serial",
     "lint": "npm run lint:js ",
     "lint:eslint": "eslint --ignore-path .gitignore --ext .ts",
     "lint:js": "npm run lint:eslint src/",
@@ -37,6 +37,7 @@
     "agenda": "^2.0.2",
     "agendash": "^1.0.0",
     "argon2": "^0.28.5",
+    "assert-ts": "^0.3.4",
     "axios": "^1.2.0",
     "bent": "7.3.12",
     "body-parser": "^1.18.2",
@@ -87,6 +88,7 @@
     "request-promise": "^4.2.6",
     "secp256k1-v4": "https://github.com/HarshRajat/secp256k1-node",
     "socket.io": "^4.4.1",
+    "ts-luxon": "^4.0.1",
     "typedi": "^0.8.0",
     "typescript": "^4.5.4",
     "typings": "^2.1.1",
