Add api calls from snode

--- a/snode/package.json
+++ b/snode/package.json
@@ -37,6 +37,7 @@
     "agenda": "^2.0.2",
     "agendash": "^1.0.0",
     "argon2": "^0.28.5",
+    "axios": "^1.2.1",
     "bent": "7.3.12",
     "body-parser": "^1.18.2",
     "celebrate": "^9.1.0",
@@ -83,6 +84,7 @@
     "random-avatar-generator": "^2.0.0",
     "reflect-metadata": "^0.1.12",
     "request-promise": "^4.2.6",
+    "retry-axios": "^3.0.0",
     "secp256k1-v4": "https://github.com/HarshRajat/secp256k1-node",
     "socket.io": "^4.4.1",
     "typedi": "^0.8.0",
