--- a/vnode/package.json
+++ b/vnode/package.json
@@ -24,6 +24,7 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "axios": "^1.2.1",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "luxon": "^3.1.0",
@@ -31,6 +32,7 @@
     "pg-promise": "^10.15.0",
     "random": "^4.0.3",
     "reflect-metadata": "^0.1.13",
+    "retry-axios": "^3.0.0",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "unique-random": "^3.0.0",
