--- a/vnode/package.json
+++ b/vnode/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "axios": "^1.2.1",
+    "axios-retry": "^3.3.1",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "luxon": "^3.1.0",
