--- a/vnode/package.json
+++ b/vnode/package.json
@@ -21,11 +21,14 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^9.0.0",
+    "@nestjs/common": "^9.2.1",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "axios": "^1.2.0",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
+    "log4js": "^6.7.1",
     "luxon": "^3.1.0",
     "moment": "^2.29.4",
     "pg-promise": "^10.15.0",
@@ -33,6 +36,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "ts-luxon": "^4.0.1",
     "unique-random": "^3.0.0",
     "winston": "^3.8.2",
     "winston-transport": "^4.5.0"
