--- a/snode/package.json
+++ b/snode/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "epns-push-service-dev",
-  "version": "0.4.0",
-  "description": "EPNS Push Service Dev",
+  "name": "snode",
+  "version": "0.1",
+  "description": "storage node",
   "main": "src/app.ts",
   "scripts": {
     "build": "rimraf ./build && tsc",
