--- a/dstorage-common/package.json
+++ b/dstorage-common/package.json
@@ -2,7 +2,7 @@
   "name": "dstorage-common",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
