Fix docker db connections

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       - "RUNNING_ON_MACHINE=mac"
       - "LOG_LEVEL='debug'"
       - "SERVER_ENV=DEV"
-      - "DB_HOST=localhost"
+      - "DB_HOST=db"
       - "DB_NAME=postgres@vnode"
       - "DB_USER=postgres"
       - "DB_PASS=postgres"
@@ -42,7 +42,7 @@ services:
       - "RUNNING_ON_MACHINE=mac"
       - "LOG_LEVEL='debug'"
       - "SERVER_ENV=DEV"
-      - "DB_HOST=localhost"
+      - "DB_HOST=db"
       - "DB_NAME=snode1"
       - "DB_USER=postgres"
       - "DB_PASS=postgres"
@@ -60,7 +60,7 @@ services:
         - "RUNNING_ON_MACHINE=mac"
         - "LOG_LEVEL='debug'"
         - "SERVER_ENV=DEV"
-        - "DB_HOST=localhost"
+        - "DB_HOST=db"
         - "DB_NAME=snode2"
         - "DB_USER=postgres"
         - "DB_PASS=postgres"
@@ -78,7 +78,7 @@ services:
         - "RUNNING_ON_MACHINE=mac"
         - "LOG_LEVEL='debug'"
         - "SERVER_ENV=DEV"
-        - "DB_HOST=localhost"
+        - "DB_HOST=db"
         - "DB_NAME=snode3"
         - "DB_USER=postgres"
         - "DB_PASS=postgres"
@@ -96,7 +96,7 @@ services:
         - "RUNNING_ON_MACHINE=mac"
         - "LOG_LEVEL='debug'"
         - "SERVER_ENV=DEV"
-        - "DB_HOST=localhost"
+        - "DB_HOST=db"
         - "DB_NAME=snode4"
         - "DB_USER=postgres"
         - "DB_PASS=postgres"
