--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -10,11 +10,17 @@ services:
       - '5432:5432'
     volumes:
       - ./docker_postgres_init.sql:/docker-entrypoint-initdb.d/docker_postgres_init.sql
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   vnode1:
     image: vnodeimage
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     environment:
       - "NODE_ENV='development'"
       - "PORT=4000"
@@ -35,7 +41,8 @@ services:
   snode1:
     image: snodeimage
     depends_on:
-      - vnode1
+      db:
+        condition: service_healthy
     environment:
       - "NODE_ENV='development'"
       - "PORT=3000"
@@ -53,7 +60,8 @@ services:
   snode2:
       image: snodeimage
       depends_on:
-        - snode1
+        db:
+          condition: service_healthy
       environment:
         - "NODE_ENV='development'"
         - "PORT=3001"
@@ -71,7 +79,8 @@ services:
   snode3:
       image: snodeimage
       depends_on:
-        - snode2
+        db:
+          condition: service_healthy
       environment:
         - "NODE_ENV='development'"
         - "PORT=3002"
@@ -89,7 +98,8 @@ services:
   snode4:
       image: snodeimage
       depends_on:
-        - snode3
+        db:
+          condition: service_healthy
       environment:
         - "NODE_ENV='development'"
         - "PORT=3003"
