--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -41,6 +41,8 @@ services:
     depends_on:
       db:
         condition: service_healthy
+      dbsetup:
+        condition: service_completed_successfully
     environment:
       - "NODE_ENV='development'"
       - "PORT=4000"
@@ -63,6 +65,8 @@ services:
     depends_on:
       db:
         condition: service_healthy
+      dbsetup:
+        condition: service_completed_successfully
     environment:
       - "NODE_ENV='development'"
       - "PORT=3000"
@@ -88,6 +92,8 @@ services:
       depends_on:
         db:
           condition: service_healthy
+        dbsetup:
+          condition: service_completed_successfully
       environment:
         - "NODE_ENV='development'"
         - "PORT=3001"
@@ -113,6 +119,8 @@ services:
       depends_on:
         db:
           condition: service_healthy
+        dbsetup:
+          condition: service_completed_successfully
       environment:
         - "NODE_ENV='development'"
         - "PORT=3002"
@@ -138,6 +146,8 @@ services:
       depends_on:
         db:
           condition: service_healthy
+        dbsetup:
+          condition: service_completed_successfully
       environment:
         - "NODE_ENV='development'"
         - "PORT=3003"
