--- a/contract/package.json
+++ b/contract/package.json
@@ -6,7 +6,9 @@
     "hardhat": "^2.12.6"
   },
   "dependencies": {
+    "@nomiclabs/hardhat-etherscan": "^3.1.5",
     "@openzeppelin/contracts": "^4.8.1",
+    "@openzeppelin/hardhat-upgrades": "^1.22.1",
     "dotenv": "^16.0.3"
   }
 }
