--- a/smart-contracts/package.json
+++ b/smart-contracts/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "@nomiclabs/hardhat-etherscan": "^3.1.5",
-    "@openzeppelin/contracts": "^4.8.1",
+    "@openzeppelin/contracts": "^4.8.3",
+    "@openzeppelin/contracts-upgradeable": "^4.8.3",
     "@openzeppelin/hardhat-upgrades": "^1.22.1",
     "dotenv": "^16.0.3"
   }
