--- a/snode/package.json
+++ b/snode/package.json
@@ -56,7 +56,6 @@
     "ethereum-blockies-base64": "^1.0.2",
     "ethereum-blockies-png": "^0.1.3",
     "ethereum-public-key-to-address": "0.0.2",
-    "ethers": "5.0.18",
     "event-dispatch": "^0.4.1",
     "eventemitter3": "^3.1.0",
     "express": "^4.16.2",
@@ -95,7 +94,10 @@
     "underscore": "^1.13.6",
     "unique-names-generator": "^4.7.1",
     "web3": "1.6.0",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "socket.io-client": "^4.5.3",
+    "ethers": "^5.7.2",
+    "object-hash": "^3.0.0"
   },
   "devDependencies": {
     "@types/agenda": "^2.0.4",
