--- a/snode/package.json
+++ b/snode/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "rimraf ./build && tsc",
     "dev": "ts-node-dev --respawn --inspect=9229 --transpile-only ./src/app.ts",
+    "dev6001": "ts-node-dev --inspect=6001 --transpile-only ./src/app.ts",
     "heroku-postbuild": "npm run build",
     "start": "nodemon",
     "inspect": "nodemon --inspect src/app.ts",
@@ -56,6 +57,7 @@
     "ethereum-blockies-base64": "^1.0.2",
     "ethereum-blockies-png": "^0.1.3",
     "ethereum-public-key-to-address": "0.0.2",
+    "ethers": "^5.7.2",
     "event-dispatch": "^0.4.1",
     "eventemitter3": "^3.1.0",
     "express": "^4.16.2",
@@ -78,7 +80,9 @@
     "multer": "^1.4.5-lts.1",
     "mysql": "2.18.1",
     "nano-ipfs-store": "0.1.3",
+    "node-docker-api": "^1.1.22",
     "node-schedule": "1.3.2",
+    "object-hash": "^3.0.0",
     "openpgp": "^5.3.1",
     "pg-promise": "^10.12.0",
     "promise.allsettled": "^1.0.6",
@@ -87,6 +91,7 @@
     "request-promise": "^4.2.6",
     "secp256k1-v4": "https://github.com/HarshRajat/secp256k1-node",
     "socket.io": "^4.4.1",
+    "socket.io-client": "^4.5.3",
     "ts-luxon": "^4.0.1",
     "typedi": "^0.8.0",
     "typescript": "^4.5.4",
@@ -94,10 +99,7 @@
     "underscore": "^1.13.6",
     "unique-names-generator": "^4.7.1",
     "web3": "1.6.0",
-    "winston": "^3.2.1",
-    "socket.io-client": "^4.5.3",
-    "ethers": "^5.7.2",
-    "object-hash": "^3.0.0"
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "@types/agenda": "^2.0.4",
@@ -112,7 +114,6 @@
     "@typescript-eslint/eslint-plugin": "^1.7.0",
     "@typescript-eslint/parser": "^1.7.0",
     "aws-sdk": "2.770.0",
-    "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.2.0",
     "eslint-plugin-prettier": "^3.0.1",
     "jest": "^24.1.0",
@@ -120,10 +121,10 @@
     "nodemon": "^2.0.1",
     "prettier": "^1.17.0",
     "ts-jest": "^24.0.0",
-    "ts-node": "^7.0.1",
-    "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.0.0",
+    "typescript": "^4.5.4",
+    "ts-node": "^10.4.0",
     "tslint": "^5.11.0",
-    "typescript": "^3.1.3"
+    "ts-node-dev": "1.0.0-pre.44"
   }
 }
