--- a/snode/package.json
+++ b/snode/package.json
@@ -47,7 +47,7 @@
     "chai": "^4.3.6",
     "chai-http": "^4.3.0",
     "chalk": "^4.1.2",
-    "cors": "^2.8.4",
+    "cors": "^2.8.5",
     "crypto-js": "4.0.0",
     "dotenv": "^8.2.0",
     "eccrypto": "^1.1.3",
@@ -122,10 +122,10 @@
     "nodemon": "^2.0.1",
     "prettier": "^1.17.0",
     "ts-jest": "^24.0.0",
-    "tsconfig-paths": "^4.0.0",
-    "typescript": "^4.5.4",
     "ts-node": "^10.4.0",
+    "ts-node-dev": "1.0.0-pre.44",
+    "tsconfig-paths": "^4.0.0",
     "tslint": "^5.11.0",
-    "ts-node-dev": "1.0.0-pre.44"
+    "typescript": "^4.5.4"
   }
 }
