--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1",
   "description": "storage node",
   "main": "src/app.ts",
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  },
   "scripts": {
     "build": "rimraf ./build && tsc",
     "dev": "ts-node-dev --respawn --inspect=9229 --transpile-only ./src/app.ts",
@@ -117,10 +122,12 @@
     "aws-sdk": "2.770.0",
     "eslint-config-prettier": "^4.2.0",
     "eslint-plugin-prettier": "^3.0.1",
+    "husky": "^9.1.0",
     "jest": "^24.1.0",
     "mocha": "^9.1.3",
     "nodemon": "^2.0.1",
     "prettier": "^1.17.0",
+    "pretty-quick": "^4.0.0",
     "ts-jest": "^24.0.0",
     "ts-node": "^10.4.0",
     "ts-node-dev": "1.0.0-pre.44",
