--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "lint": "npm run lint:js ",
     "lint:eslint": "eslint --ignore-path .gitignore --ext .ts",
     "lint:js": "npm run lint:eslint src/",
-    "lint:fix": "npm run lint:js -- --fix"
+    "lint:fix": "npm run lint:js -- --fix",
+    "format": "npx prettier --write .",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
