--- a/package.json
+++ b/package.json
@@ -22,10 +22,9 @@
     }
   },
   "lint-staged": {
-    "*.js": [
-      "eslint — fix",
-      "prettier — write",
-      "git add"
+    "*.{ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
     ]
   },
   "repository": {
@@ -133,6 +132,7 @@
     "eslint-plugin-unused-imports": "^4.0.0",
     "husky": "^9.0.11",
     "jest": "^24.1.0",
+    "lint-staged": "^15.2.7",
     "mocha": "^9.1.3",
     "nodemon": "^2.0.1",
     "prettier": "^3.3.3",
