--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "pg-promise": "^10.12.0",
     "promise.allsettled": "^1.0.6",
     "random-avatar-generator": "^2.0.0",
+    "redis": "^4.6.15",
     "reflect-metadata": "^0.1.12",
     "request-promise": "^4.2.6",
     "secp256k1-v4": "https://github.com/HarshRajat/secp256k1-node",
@@ -116,7 +117,6 @@
     "@types/agenda": "^2.0.4",
     "@types/chai": "^4.3.0",
     "@types/express": "^4.16.0",
-    "@types/jest": "^23.3.8",
     "@types/lodash": "^4.14.118",
     "@types/mocha": "^9.0.0",
     "@types/mongoose": "^5.3.17",
@@ -132,13 +132,11 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "^4.0.0",
     "husky": "^9.0.11",
-    "jest": "^24.1.0",
     "lint-staged": "^15.2.7",
     "mocha": "^9.1.3",
     "nodemon": "^2.0.1",
     "prettier": "^3.3.3",
     "pretty-quick": "^4.0.0",
-    "ts-jest": "^24.0.0",
     "ts-node": "^10.4.0",
     "ts-node-dev": "1.0.0-pre.44",
     "tsconfig-paths": "^4.0.0",
