--- a/package.json
+++ b/package.json
@@ -45,90 +45,38 @@
   },
   "homepage": "https://github.com/push-protocol/push-snode#readme",
   "dependencies": {
-    "@rodrigogs/mysql-events": "0.6.0",
-    "agenda": "^2.0.2",
-    "agendash": "^1.0.0",
-    "argon2": "^0.28.5",
-    "assert-ts": "^0.3.4",
     "axios": "^1.2.0",
-    "bent": "7.3.12",
-    "body-parser": "^1.18.2",
-    "celebrate": "^9.1.0",
     "chai": "^4.3.6",
-    "chai-http": "^4.3.0",
     "chalk": "^4.1.2",
     "cors": "^2.8.5",
-    "crypto-js": "4.0.0",
     "dotenv": "^8.2.0",
-    "eccrypto": "^1.1.3",
-    "envfile": "6.14.0",
-    "errorhandler": "^1.5.0",
-    "eth-crypto": "1.6.0",
-    "eth-sig-util": "^3.0.1",
-    "ethereum-blockies-base64": "^1.0.2",
-    "ethereum-blockies-png": "^0.1.3",
-    "ethereum-public-key-to-address": "0.0.2",
     "ethers": "^5.7.2",
-    "event-dispatch": "^0.4.1",
-    "eventemitter3": "^3.1.0",
     "express": "^4.16.2",
-    "express-basic-auth": "^1.2.0",
-    "express-jwt": "^5.3.1",
-    "firebase-admin": "8.12.1",
-    "graphql": "^16.5.0",
-    "graphql-request": "^4.2.0",
-    "image-size": "0.8.3",
-    "ipfs-http-client": "^56.0.3",
-    "jsonwebtoken": "^8.2.0",
     "lodash": "^4.17.21",
-    "luxon": "^3.0.3",
-    "mailgun-js": "^0.22.0",
-    "method-override": "^3.0.0",
-    "moment": "^2.23.0",
-    "moment-timezone": "^0.5.23",
-    "mongoose": "^5.7.5",
-    "morgan": "^1.9.1",
-    "multer": "^1.4.5-lts.1",
+    "logform": "^2.6.1",
     "mysql": "2.18.1",
-    "nano-ipfs-store": "0.1.3",
-    "node-docker-api": "^1.1.22",
     "node-schedule": "1.3.2",
     "object-hash": "^3.0.0",
-    "openpgp": "^5.3.1",
     "pg-promise": "^10.12.0",
-    "promise.allsettled": "^1.0.6",
-    "random-avatar-generator": "^2.0.0",
     "redis": "^4.6.15",
     "reflect-metadata": "^0.1.12",
-    "request-promise": "^4.2.6",
-    "secp256k1-v4": "https://github.com/HarshRajat/secp256k1-node",
-    "socket.io": "^4.4.1",
-    "socket.io-client": "^4.5.3",
     "ts-luxon": "^4.0.1",
     "typedi": "^0.8.0",
     "typescript": "^4.5.4",
-    "typings": "^2.1.1",
-    "underscore": "^1.13.6",
-    "unique-names-generator": "^4.7.1",
-    "web3": "1.6.0",
+    "uuid": "^10.0.0",
     "winston": "^3.2.1"
   },
   "devDependencies": {
-    "@types/agenda": "^2.0.4",
     "@types/chai": "^4.3.0",
     "@types/express": "^4.16.0",
     "@types/lodash": "^4.14.118",
     "@types/mocha": "^9.0.0",
-    "@types/mongoose": "^5.3.17",
     "@types/mysql": "^2.15.21",
     "@types/node": "^10.17.60",
     "@types/object-hash": "^3.0.6",
     "@typescript-eslint/eslint-plugin": "^7.16.1",
     "@typescript-eslint/parser": "^7.16.1",
-    "aws-sdk": "2.770.0",
     "eslint": "^8.7.0",
-    "eslint-config-prettier": "^4.2.0",
-    "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "^4.0.0",
     "husky": "^9.0.11",
@@ -136,11 +84,8 @@
     "mocha": "^9.1.3",
     "nodemon": "^2.0.1",
     "prettier": "^3.3.3",
-    "pretty-quick": "^4.0.0",
     "ts-node": "^10.4.0",
     "ts-node-dev": "1.0.0-pre.44",
-    "tsconfig-paths": "^4.0.0",
-    "tslint": "^5.11.0",
     "typescript": "^4.5.4"
   }
 }
