--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1",
   "description": "storage node",
   "main": "src/app.ts",
+  "engines": {
+    "npm": "please-use-yarn",
+    "yarn": ">= 1.0.0",
+    "node": ">= 16.5.0"
+  },
   "scripts": {
     "build": "rimraf ./build && tsc",
     "dev": "ts-node-dev --respawn --inspect=9229 --transpile-only ./src/app.ts",
