--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "lint": "eslint '**/*.{js,ts,jsx,tsx}'",
     "lint:fix": "eslint --fix '**/*.{js,ts,jsx,tsx}'",
     "format": "prettier --write '**/*.{js,ts,jsx,tsx}'",
-    "prepare": "husky"
+    "prepare": "husky install",
+    "build:proto": "scripts/protoc-generate.sh"
   },
   "husky": {
     "hooks": {
@@ -56,7 +57,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ethers": "^5.7.2",
-    "express": "^4.16.2",
+    "express": "^4.19.2",
+    "express-json-rpc-router": "^1.4.0",
     "lodash": "^4.17.21",
     "logform": "^2.6.1",
     "mysql": "2.18.1",
@@ -66,10 +68,13 @@
     "redis": "^4.6.15",
     "reflect-metadata": "^0.1.12",
     "ts-luxon": "^4.0.1",
+    "ts-proto": "^2.0.3",
+    "ts-protoc-gen": "^0.15.0",
     "typedi": "^0.8.0",
     "typescript": "^4.5.4",
     "uuid": "^10.0.0",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/chai": "^4.3.0",
