--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,19 +4,15 @@
   },
   "compilerOptions": {
     "target": "es2017",
-    "lib": [
-      "es2017",
-      "esnext.asynciterable"
-    ],
-    "typeRoots": [
-      "./node_modules/@types",
-      "./src/types"
-    ],
+    "lib": ["es2017", "esnext.asynciterable"],
+//    "typeRoots": ["./node_modules/@types", "./src/types"],
+    "typeRoots": ["./node_modules/@types", "./src/types", "./src/generated"],
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node",
+   "moduleResolution": "node",
+    // "moduleResolution": "nodenext",
     "module": "commonjs",
     "pretty": true,
     "sourceMap": true,
@@ -24,14 +20,11 @@
     "allowJs": true,
     "noEmit": false,
     "resolveJsonModule": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+
+//    "skipLibCheck": false
+    "skipLibCheck": true
   },
-  "include": [
-    "./src/**/*",
-    "./src/**/*.json"
-  ],
-  "exclude": [
-    "node_modules",
-    "tests"
-  ]
+  "include": ["./src/**/*", "./src/**/*.json"],
+  "exclude": ["node_modules", "tests"]
 }
