--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "chai": "^4.3.6",
     "chalk": "^4.1.2",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dotenv": "^8.2.0",
     "ethers": "^5.7.2",
     "express": "^4.19.2",
@@ -78,6 +79,7 @@
   },
   "devDependencies": {
     "@types/chai": "^4.3.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/express": "^4.16.0",
     "@types/lodash": "^4.14.118",
     "@types/mocha": "^9.0.0",
