--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   },
   "homepage": "https://github.com/push-protocol/push-snode#readme",
   "dependencies": {
+    "@solana/web3.js": "^1.95.3",
     "axios": "^1.2.0",
     "chai": "^4.3.6",
     "chalk": "^4.1.2",
@@ -71,6 +72,7 @@
     "ts-luxon": "^4.0.1",
     "ts-proto": "^2.0.3",
     "ts-protoc-gen": "^0.15.0",
+    "tweetnacl": "^1.0.3",
     "typedi": "^0.8.0",
     "typescript": "^4.5.4",
     "uuid": "^10.0.0",
