--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "pg-promise": "^10.12.0",
     "redis": "^4.6.15",
     "reflect-metadata": "^0.1.12",
+    "starknet": "^6.11.0",
     "ts-luxon": "^4.0.1",
     "ts-proto": "^2.0.3",
     "ts-protoc-gen": "^0.15.0",
