--- a/.prettierignore
+++ b/.prettierignore
@@ -2,4 +2,6 @@ node_modules
 public
 build
 dist
-# *.ts
+# these files come from push-vnode; don't reformat them please;
+src/utilz/*.ts
+src/services/messaging-common/*.ts
