--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "dependencies": {
     "@solana/web3.js": "^1.95.3",
     "axios": "^1.2.0",
+    "bech32": "^2.0.0",
     "chai": "^4.3.6",
     "chalk": "^4.1.2",
     "cors": "^2.8.5",
